<resources>
    <string name="app_name">WanAndroid</string>

    <string name="scale_down_show_behavior">com.zkp.wanandroid.utils.ScaleDownShowBehavior</string>
    <string name="bye_burger_bottom_behavior">com.zkp.wanandroid.utils.BottomNavigationBehavior</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="title_home">主页</string>
    <string name="title_knowledge_hierarchy">知识体系</string>
    <string name="title_wx_article">公众号</string>
    <string name="title_navigation">导航</string>
    <string name="title_project">项目</string>
    <string name="login_in">登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="nav_welfare">福利</string>
    <string name="nav_weather">天气</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_day_mode">日间模式</string>
    <string name="setting">设置</string>
    <string name="about_us">关于</string>
    <string name="cnblogs">测试博客</string>
    <string name="logout">退出登录</string>
    <string name="action_search">搜索</string>
    <string name="search_tint">发现更多精彩内容</string>
    <string name="useful_sites">常用网站</string>
    <string name="top">top</string>
    <string name="new1">new</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="open_it_with_browser">用浏览器打开</string>
    <string name="enter_user_name">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="register">没有账号？现在注册</string>
    <string name="login">登录</string>
    <string name="enter_password_again">请再次输入密码</string>
    <string name="registertxt">注册</string>

    <string name="todo_title">TODO</string>
    <string name="todo">待办</string>
    <string name="done_todo">已完成</string>

    <string name="todo_all">全部</string>
    <string name="todo_work">工作</string>
    <string name="todo_study">学习</string>
    <string name="todo_life">生活</string>
    <string name="todo_other">其他</string>

    <string name="todo_priority">重要</string>

    <string name="todo_edit_title">编辑</string>
    <string name="todo_new_title">新建</string>

    <string name="tv_add_todo_title">标题:</string>
    <string name="tv_add_todo_content">详情:</string>
    <string name="tv_add_todo_label">标签:</string>
    <string name="tv_add_todo_priority">优先级:</string>
    <string name="tv_add_todo_date">日期:</string>
    <string name="hint_add_todo_not_null">必填</string>
    <string name="hint_add_todo_null_able">非必填</string>
    <string name="todo_no_label">无标签</string>
    <string name="todo_priority_1">重要</string>
    <string name="todo_priority_2">一般</string>
    <string name="bt_todo_save">保存</string>
    <string name="bt_choose_label">选择标签</string>

    <string name="about_update">检查更新</string>
    <string name="about_website">关于网站</string>
    <string name="about_source_code">源码下载</string>
    <string name="about_feedback">意见反馈</string>
    <string name="about_copyright">版权声明</string>

    <string name="cache_setting">缓存设置</string>
    <string name="clear_cache">清空缓存</string>

    <string name="history_search">搜索历史</string>
    <string name="hot_search">热搜</string>
    <string name="clear_all">全部清除</string>
    <string name="search_null_tint">快去搜索更多干货吧</string>

    <string name="temperature">℃</string>
    <string name="temperature_data">19.5</string>
    <string name="humidity">湿度</string>
    <string name="aqi_excellent">优</string>
    <string name="wind">风力</string>
    <string name="ultraviolet">紫外线</string>
    <string name="visibility">能见度</string>
    <string name="intensity">降水量</string>
    <string name="pm2_5">pm2.5</string>
    <string name="dswrf">短波辐射</string>
    <string name="tgwd">体感温度</string>

    <string name="cloth">穿衣</string>
    <string name="car">洗车</string>
    <string name="cold">感冒</string>
    <string name="sunrise">日出：</string>
    <string name="sunset">日落：</string>
    <string name="daylong">昼长：</string>

</resources>
