<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
                android:id="@+id/nav_item_my_collect"
                android:icon="@drawable/icon_like"
                android:title="@string/my_collect"/>

        <item
                android:id="@+id/nav_item_welfare"
                android:icon="@drawable/icon_welfare"
                android:title="@string/nav_welfare"/>

        <item
                android:id="@+id/nav_item_weather"
                android:icon="@drawable/icon_weather"
                android:title="@string/nav_weather"/>

        <item
                android:id="@+id/nav_item_todo"
                android:icon="@drawable/ic_todo_default"
                android:title="@string/nav_todo"/>

        <item
                android:id="@+id/nav_item_night_mode"
                android:icon="@drawable/ic_night"
                android:title="@string/nav_night_mode"/>

        <item
                android:id="@+id/nav_item_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/setting"/>

        <item
                android:id="@+id/nav_item_about_us"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us"/>

        <item
                android:id="@+id/nav_item_cnblogs"
                android:icon="@drawable/ic_cnblogs"
                android:title="@string/cnblogs"/>

        <item
                android:id="@+id/nav_item_logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/logout"/>

    </group>
</menu>