<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/colorWhite">

    <include
            android:id="@+id/add_todo_toolbar_layout"
            layout="@layout/toolbar"/>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_20">

            <!--Title-->
            <TextView
                    android:id="@+id/tv_add_todo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_13"
                    android:text="@string/tv_add_todo_title"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/et_add_todo_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:layout_marginEnd="@dimen/dp_13"
                    android:background="@null"
                    android:hint="@string/hint_add_todo_not_null"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintLeft_toRightOf="@+id/tv_add_todo_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_title"/>

            <View
                    android:id="@+id/title_divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/dp_13"
                    android:background="@color/Grey300"
                    app:layout_constraintTop_toBottomOf="@+id/et_add_todo_title"/>

            <!--Content-->
            <TextView
                    android:id="@+id/tv_add_todo_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_13"
                    android:text="@string/tv_add_todo_content"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_divider_line"/>

            <EditText
                    android:id="@+id/et_add_todo_content"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:layout_marginEnd="@dimen/dp_13"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/hint_add_todo_null_able"
                    android:inputType="text|textMultiLine"
                    android:minHeight="@dimen/dp_120"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintLeft_toRightOf="@+id/tv_add_todo_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_content"/>

            <View
                    android:id="@+id/content_divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/dp_13"
                    android:background="@color/Grey300"
                    app:layout_constraintTop_toBottomOf="@+id/et_add_todo_content"/>

            <!--Priority-->
            <TextView
                    android:id="@+id/tv_add_todo_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_13"
                    android:text="@string/tv_add_todo_priority"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/content_divider_line"/>

            <RadioGroup
                    android:id="@+id/rg_todo_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_add_todo_priority"
                    app:layout_constraintLeft_toRightOf="@+id/tv_add_todo_priority"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_priority">

                <RadioButton
                        android:id="@+id/rb_todo_priority_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/bottom_nav_checked"
                        android:checked="true"
                        android:text="@string/todo_priority_1"
                        android:textColor="@color/Grey900"/>

                <RadioButton
                        android:id="@+id/rb_todo_priority_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_13"
                        android:buttonTint="@color/bottom_nav_checked"
                        android:text="@string/todo_priority_2"
                        android:textColor="@color/Grey900"/>
            </RadioGroup>

            <View
                    android:id="@+id/priority_divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/dp_13"
                    android:background="@color/Grey300"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_todo_priority"/>

            <!--Label-->
            <TextView
                    android:id="@+id/tv_add_todo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_13"
                    android:text="@string/tv_add_todo_label"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priority_divider_line"/>

            <TextView
                    android:id="@+id/tv_add_todo_label_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toRightOf="@+id/tv_add_todo_label"
                    app:layout_constraintRight_toLeftOf="@+id/iv_label_arrow_right"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_label"
                    tools:text="@string/todo_no_label"/>

            <ImageView
                    android:id="@+id/iv_label_arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:layout_marginEnd="@dimen/dp_13"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_label"
                    app:srcCompat="@drawable/ic_arrow_right_24dp"/>

            <View
                    android:id="@+id/label_divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/dp_13"
                    android:background="@color/Grey300"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_todo_label"/>

            <!--Date-->
            <TextView
                    android:id="@+id/tv_add_todo_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_13"
                    android:text="@string/tv_add_todo_date"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_divider_line"/>

            <TextView
                    android:id="@+id/tv_add_todo_date_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toRightOf="@+id/tv_add_todo_date"
                    app:layout_constraintRight_toLeftOf="@+id/iv_date_arrow_right"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_date"
                    tools:text="2019-01-10"/>

            <ImageView
                    android:id="@+id/iv_date_arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_13"
                    android:layout_marginEnd="@dimen/dp_13"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_add_todo_date"
                    app:srcCompat="@drawable/ic_arrow_right_24dp"/>

            <View
                    android:id="@+id/date_divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/dp_13"
                    android:background="@color/Grey300"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_todo_date"/>

            <TextView
                    android:id="@+id/bt_todo_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_20"
                    android:background="@drawable/login_bg_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/bt_todo_save"
                    android:textColor="@drawable/login_text_selector"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintTop_toBottomOf="@+id/date_divider_line"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>