<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:id="@+id/about_us_content"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/colorWhite"
                                            android:clipToPadding="false">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_60"
                android:drawableTop="@mipmap/ic_launcher"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/Grey900"
                android:textSize="@dimen/sp_16" />

        <android.support.v7.widget.CardView
                android:id="@+id/about_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dp_0"
                app:cardElevation="@dimen/dp_0">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_14"
                    android:text="@string/about_update"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16" />

        </android.support.v7.widget.CardView>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/Grey300" />

        <android.support.v7.widget.CardView
                android:id="@+id/about_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dp_0"
                app:cardElevation="@dimen/dp_0">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_14"
                    android:text="@string/about_website"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16" />

        </android.support.v7.widget.CardView>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/Grey300" />

        <android.support.v7.widget.CardView
                android:id="@+id/about_source_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dp_0"
                app:cardElevation="@dimen/dp_0">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_14"
                    android:text="@string/about_source_code"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16" />

        </android.support.v7.widget.CardView>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/Grey300" />

        <android.support.v7.widget.CardView
                android:id="@+id/about_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dp_0"
                app:cardElevation="@dimen/dp_0">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_14"
                    android:text="@string/about_feedback"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16" />

        </android.support.v7.widget.CardView>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/Grey300" />

        <android.support.v7.widget.CardView
                android:id="@+id/about_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dp_0"
                app:cardElevation="@dimen/dp_0">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_14"
                    android:text="@string/about_copyright"
                    android:textColor="@color/Grey900"
                    android:textSize="@dimen/sp_16" />

        </android.support.v7.widget.CardView>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/Grey300" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>