<?xml version="1.0" encoding="utf-8"?>
<com.classic.common.MultipleStatusView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:id="@+id/custom_multiple_status_view"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       app:noNetworkView="@layout/no_network_view"
                                       app:emptyView="@layout/empty_view"
                                       app:errorView="@layout/error_view"
                                       app:loadingView="@layout/loading_view">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

        <include layout="@layout/toolbar_search"/>

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:visibility="visible"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_16">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:text="@string/hot_search"
                        android:textColor="@color/bottom_nav_checked"
                        android:textSize="@dimen/sp_16"/>

                <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/tagFlowLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:max_select="0"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_24">

                    <TextView
                            android:id="@+id/tvClearAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:drawablePadding="@dimen/dp_6"
                            android:text="@string/clear_all"
                            android:textColor="@color/Grey400"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvClearAll"
                            android:text="@string/history_search"
                            android:textColor="@color/bottom_nav_checked"
                            android:textSize="@dimen/sp_16"/>

                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp_12"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</com.classic.common.MultipleStatusView>